@@ -11,8 +11,8 @@ First, read http://wiki.freebsd.org/SubversionPrimer/VendorImports
 # Xlist
 setenv XLIST /FreeBSD/work/openssl/svn-FREEBSD-files/FREEBSD-Xlist
 setenv FSVN "svn+ssh://svn.freebsd.org/base"
-setenv OSSLVER 0.9.8zd
-# OSSLTAG format: v0_9_8zd
+setenv OSSLVER 0.9.8ze
+# OSSLTAG format: v0_9_8ze
 
 ###setenv OSSLTAG v`echo ${OSSLVER} | tr . _`
 
