@@ -1,5 +1,5 @@
 
- OpenSSL 0.9.8zd 8 Jan 2015
+ OpenSSL 0.9.8ze 15 Jan 2015
 
  Copyright (c) 1998-2011 The OpenSSL Project
  Copyright (c) 1995-1998 Eric A. Young, Tim J. Hudson
