@@ -25,11 +25,11 @@
  * (Prior to 0.9.5a beta1, a different scheme was used: MMNNFFRBB for
  *  major minor fix final patch/beta)
  */
-#define OPENSSL_VERSION_NUMBER	0x009081dfL
+#define OPENSSL_VERSION_NUMBER	0x009081efL
 #ifdef OPENSSL_FIPS
-#define OPENSSL_VERSION_TEXT	"OpenSSL 0.9.8zd-fips 8 Jan 2015"
+#define OPENSSL_VERSION_TEXT	"OpenSSL 0.9.8ze-fips 15 Jan 2015"
 #else
-#define OPENSSL_VERSION_TEXT	"OpenSSL 0.9.8zd 8 Jan 2015"
+#define OPENSSL_VERSION_TEXT	"OpenSSL 0.9.8ze 15 Jan 2015"
 #endif
 #define OPENSSL_VERSION_PTEXT	" part of " OPENSSL_VERSION_TEXT
 
